<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_emergency"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_emergency" />
        <item
            android:id="@+id/nav_diagnosis"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_diagnosis" />
        <item
            android:id="@+id/nav_symptom"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_symptoms" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_settings" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_help" />
            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_feedback" />
        </menu>
    </item>

</menu>
